# SoftTissueDeformations

./: README.md
AbaqusToImage/: CMakeLists.txt  rect_abaqus_three_tissue.rpy  rect_abaqus_two_tissue.rpy
AbaqusToImage/src/: Main.cxx
BCPreperation/: CMakeLists.txt
BCPreperation/src/: Main.cxx
DVFRegularization/: CMakeLists.txt  comparison_tumor.pvsm  comparison_two_direction.pvsm  paraview_project.pvsm  rect_profile_difference.pvsm  tumor_profile_difference.pvsm
DVFRegularization/includes/: APrioriImageInformation.h  Definitions.h  DisplacementBoundaryCondition.h  MechanicalProperties.h  Utils.h  YDisplacementBoundaryCondition.h  itkAddGaussianNoiseFilter.h  itkEnergyFunction.h  itkInterpolateNextStepFilter.h  itkMRFRegularizationFilter.h  itkMRFRegularizationFilterGPU.h  itkPoissonEnergyFunction.h  itkTestEnergyFunctionImpl.h  itkYoungPoissonEnergyFunction.h  vtkAbaqusPointsReader.h
DVFRegularization/src/: APrioriImageInformation.cxx  Main.cxx  MechanicalProperties.cxx  Utils.cxx  itkAddGaussianNoiseFilter.txx  itkEnergyFunction.txx  itkInterpolateNextStepFilter.txx  itkMRFRegularizationFilter.txx  itkMRFRegularizationFilterGPU.txx  itkPoissonEnergyFunction.txx  itkTestEnergyFunctionImpl.txx  itkYoungPoissonEnergyFunction.txx  shader.cg  vtkAbaqusPointsReader.cxx
ElasticRegistration/: CMakeLists.txt
ElasticRegistration/src/: Main.cxx
EnergyFunctionPlot/: CMakeLists.txt
EnergyFunctionPlot/src/: Main.cxx
ITK_HelloWorld/: CMakeLists.txt  HelloWorld.cxx
ImageJToImage/: CMakeLists.txt
ImageJToImage/src/: Main.cxx
ImagePreperation/: CMakeLists.txt
ImagePreperation/src/: Main.cxx
ParameterEstimation/: CMakeLists.txt
ParameterEstimation/includes/: MetropolisSamplerMinimizer.h  RegularizationCostFunction.h
ParameterEstimation/src/: Main.cxx  MetropolisSamplerMinimizer.cxx  RegularizationCostFunction.cxx
ScaleInputImages/: CMakeLists.txt
ScaleInputImages/input/: SphincterExpansion.mhd  SphincterExpansion.raw  SphincterExpansionConfidence.mhd  SphincterExpansionConfidence.raw  SquareExpansion.mhd  SquareExpansion.raw  SquareExpansionConfidence.mhd  SquareExpansionConfidence.raw  tumor_displacement_abaqus_interpolated.mhd  tumor_displacement_abaqus_interpolated.raw  tumor_displacement_abaqus_interpolated_binary.mhd  tumor_displacement_abaqus_interpolated_binary.raw
ScaleInputImages/src/: Main.cxx
matlab/: DisplacementMagnitude.rpt  ProfileComparison.m  VisualizeMRI.m  compare_analytic_plot_displacement.m  denoise_MRF.m  difference_image.m  display_images.m  estimate_alpha.m  generate_MRF.m  generate_MRF_Binomial.m  generate_MRF_quick.m  graph_docs.m  iteration_convergence.m  main.m  matlab_w7.doc  parameter_estimate.m  piecewise_3_tissues.m  plot_alpha_optimization.m  plot_displacement.m  plot_energy_x.m  plot_example_energy_function.m  plot_fem_convergence.m  plot_vector_field.m  readRaw.m  tumor_elements_time_displacement.txt  visualize_DVF.m
